The specification of predicting bikes

--- a/ml/Predicting Bike Rental Count using Python.ipynb
+++ b/ml/Predicting Bike Rental Count using Python.ipynb
@@ -4432,7 +4432,7 @@
     "\n",
     "# Print the tuned parameters and score\n",
     "print(\"Tuned Decision Forest Parameters: {}\".format(Forest_cv.best_params_))\n",
-    "print(\"Best score is {}\".format(Forest_cv.best_score_))"
+    "print(\"Best score is {}\".format(Forest_cv.best_score_))\n"
    ]
   },
   {
