--- a/ml/train.ipynb
+++ b/ml/train.ipynb
@@ -240,7 +240,7 @@
     "# Drop every redundent columns\n",
     "merged_data = merged_data.drop(columns=['Status','LastUpdated', 'DateTime','FeelsLike','Pop','UVI','WindGust','Rain1h','Snow1h',])\n",
     "merged_data = merged_data.drop(columns=['last_update'])\n",
-    "merged_data = merged_data.drop(columns=['ForecastDate','time','minute_y','is_weekday'])"
+    "merged_data = merged_data.drop(columns=['ForecastDate','time'])"
    ],
    "metadata": {
     "collapsed": false,
